--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,79 @@
+/* styles/globals.css */
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+    /* Definir los colores en formato RGB */
+    --color-primary-rgb: 38, 13, 64;
+    /* Para #260D40 */
+    --color-secondary-rgb: 61, 23, 115;
+    /* Para #3D1773 */
+    --color-accent-rgb: 33, 115, 166;
+    /* Para #2173A6 */
+    --color-white: 255, 255, 255;
+    /* Blanco */
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.hero-section {
+    background: url('/images/portada1.jpg') no-repeat center center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.header-bar {
+    /* background-color: rgba(38, 13, 64, 0.8); */
+    background-color: rgba(var(--color-primary-rgb), 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    padding: 1.2rem 3rem;
+    /* Ajusté el padding para mayor espacio */
+    width: 100%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    /* Sombra para destacarlo */
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.logo-carrera {
+    height: 70px;
+    width: auto;
+}
+
+nav ul {
+    display: flex;
+    justify-content: center;
+    /* Centra los enlaces */
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    margin-left: 20px;
+}
+
+
+nav a {
+    color: var(--color-white);
+    text-decoration: none;
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    transition: color 0.3s ease, background-color 0.3s ease;
+    border-radius: 0.25rem;
+}
+
+nav a:hover {
+    background-color: rgba(var(--color-primary-rgb), 1);
+    color: var(--color-white);
 }
